Inmob-Salesforce/force-app/main/default/objects/Actualizar_Cuenta__c/Actualizar_Cuenta__c.object-meta.xml
<CustomObject>
    <label>Actualizar Cuenta</label>
    <nameField>
        <label>Nombre de Actualizar Cuenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actualizar Cuenta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>