Inmob-Salesforce/force-app/main/default/objects/Actualizar_Cuenta__c/fields/Cedula__c.field-meta.xml
<CustomField>
    <fullName>Cedula__c</fullName>
    <label>Cedula</label>
    <type>TextArea</type>
</CustomField>