Inmob-Salesforce/force-app/main/default/objects/Actualizar_Cuenta__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Actualizar_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>